--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "jspdf": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
